<resources>
    <string name="app_name">Phonemo</string>

    <string name="phoneme6">dʒ</string>
    <string name="AppTitleStr">Phonemo</string>
    <string name="DoneButtonStr">Done</string>
    <string name="WordCreateStr">Create</string>
    <string name="SocialMediaStr">Social Media</string>
    <string name="PersonalLibraryStr">Library</string>

    <!--Keyboard Row One-->
    <string name="LeftArrowStr">Left arrow to move cursor</string>
    <string name="RightArrowStr">Right arrow to move cursor</string>
    <string name="bButtonStr">b  \n\<b>B</b>UG</string>
    <string name="dButtonStr">d  \n\A<b>DD</b></string>
    <string name="fButtonStr">f  \n\<b>F</b>AR</string>
    <string name="gButtonStr">g  \n\E<b>GG</b></string>
    <string name="BackspaceButtonStr">Backspace</string>

    <!--Keyboard Row Two-->
    <string name="hButtonStr">h  \n\<b>H</b>OP</string>
    <string name="d3ButtonStr">dʒ \n\<b>J</b>AM</string>
    <string name="kButtonStr">k  \n\<b>C</b>AT</string>
    <string name="lButtonStr">l  \n\<b>L</b>IT</string>
    <string name="mButtonStr">m  \n\<b>M</b>AN</string>
    <string name="nButtonStr">n  \n\<b>N</b>ET</string>
    <string name="pButtonStr">p  \n\<b>P</b>IN</string>

    <!--Keyboard Row Three-->
    <string name="rButtonStr">r  \n\<b>R</b>UN</string>
    <string name="sButtonStr">s  \n\<b>S</b>ET</string>
    <string name="tButtonStr">t  \n\<b>T</b>IP</string>
    <string name="vButtonStr">v  \n\<b>V</b>INE</string>
    <string name="wButtonStr">w  \n\<b>W</b>IT</string>
    <string name="zButtonStr">z  \n\BU<b>ZZ</b></string>
    <string name="ʒButtonStr">ʒ  \n\U<b>S</b>UAL</string>

    <!--Keyboard Row Four-->
    <string name="tʃButtonStr">tʃ \n\<b>CH</b>IP</string>
    <string name="ʃButtonStr">ʃ  \n\<b>S</b>URE</string>
    <string name="θButtonStr">θ  \n\WI<b>TH</b></string>
    <string name="ðButtonStr">ð  \n\<b>TH</b>E</string>
    <string name="ŋButtonStr">ŋ  \n\RI<b>NG</b></string>
    <string name="jButtonStr">j  \n\<b>Y</b>OU</string>
    <string name="æButtonStr">æ  \n\PL<b>AI</b>D</string>

    <!--Keyboard Row Five-->
    <string name="eɪButtonStr">eɪ \n\<br />P<b>AY</b></string>
    <string name="eButtonStr">e  \n\S<b>AI</b>D</string>
    <string name="icolonButtonStr">i: \n\B<b>EE</b></string>
    <string name="ɪButtonStr">ɪ  \n\G<b>Y</b>M</string>
    <string name="aɪButtonStr">aɪ \n\SK<b>Y</b></string>
    <string name="ɒButtonStr">ɒ  \n\SL<b>AW</b></string>
    <string name="oʊButtonStr">oʊ \n\B<b>O</b>NE</string>

    <!--Keyboard Row Six-->
    <string name="ʊButtonStr">ʊ \n\L<b>OO</b>K</string>
    <string name="ʌButtonStr">ʌ  \n\L<b>U</b>G</string>
    <string name="ucolonButtonStr">u: \n\WH<b>O</b></string>
    <string name="ɔɪButtonStr">ɔɪ \n\B<b>OY</b></string>
    <string name="aʊButtonStr">aʊ \n\N<b>OW</b></string>
    <string name="əButtonStr">ə  \n\FI<b>RE</b></string>
    <string name="eəʳButtonStr">eəʳ\n\<b>AIR</b></string>
    <!--Keyboard Row Seven-->
    <string name="AddButtonStr">"Add a phoneme "</string>
    <string name="ɑcolonButtonStr">ɑ: \n\<b>ARM</b></string>
    <string name="ɜʳButtonStr">ɜ:ʳ\n\H<b>ER</b></string>
    <string name="ɔcolonButtonStr">ɔ: \n\P<b>AW</b></string>
    <string name="ɪəʳButtonStr">ɪəʳ\n\<b>EAR</b></string>
    <string name="ʊəʳButtonStr">ʊəʳ\n\C<b>U</b>RE</string>
    <string name="SpeakerButtonStr">Sounds out phoneme combinations</string>

    <!-- Other Strings -->
    <string name="startButtonStr">START</string>
    <string name="englishWordTitleSTR">Your english spelling is: </string>
    <string name="noPhonemeError">Please enter at least one phoneme to move on.</string>
    <string name="noGraphemeError">Please complete the word to move on.</string>
    <string name="tooSmallIndexError">You are at the end of the word, select a grapheme or move right</string>
    <string name="tooLargeIndexError">You are at the end of the word, select a grapheme or move left</string>
    <string name="pTooSmallIndexError">You are at the end of the word, select a phoneme or move right</string>
    <string name="pTooLargeIndexError">You are at the end of the word, select a phoneme or move left</string>
    <string name="CheckDescriptionStr">check button for grapheme</string>
    <string name="comeBackLater">Return later for more content</string>
    <string name="contextText">Add the context for your word here:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contextHint">Word Context</string>
    <string name="phonemeLabel">Your Phonemes:</string>
    <string name="graphemeLabel">Your Word:</string>


</resources>