<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="speakerOnClick"
    tools:context=".Library">

    <TextView
        android:id="@+id/phonemeDisplay"
        android:layout_width="499dp"
        android:layout_height="114dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/capriola"
        android:textAlignment="center"
        android:textColor="@color/phonemared"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonemeLabel" />

    <ImageButton
        android:id="@+id/speakerButtonLibrary"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:contentDescription="@string/SpeakerButtonStr"
        android:onClick="speakerOnClick"
        app:layout_constraintEnd_toEndOf="@+id/graphemeDisplay"
        app:layout_constraintTop_toTopOf="@+id/graphemeDisplay"
        app:srcCompat="@drawable/ic_baseline_campaign_24" />

    <TextView
        android:id="@+id/phonemeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/capriola"
        android:text="@string/phonemeLabel"
        android:textAlignment="center"
        android:textColor="@color/phonemared"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/capriola"
        android:text="@string/contextText"
        android:textAlignment="center"
        android:textColor="@color/phonemared"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphemeDisplay" />

    <TextView
        android:id="@+id/graphemeDisplay"
        android:layout_width="502dp"
        android:layout_height="114dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/capriola"
        android:textAlignment="center"
        android:textColor="@color/phonemared"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphemeLabel" />

    <TextView
        android:id="@+id/graphemeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/capriola"
        android:text="@string/graphemeLabel"
        android:textAlignment="center"
        android:textColor="@color/phonemared"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonemeDisplay" />

    <LinearLayout
        android:id="@+id/TabBar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/phonemared"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/WordCreationApp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/capriola"
            android:onClick="clickCreateButton"
            android:text="@string/WordCreateStr"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/SocialMediaTab"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/capriola"
            android:text="@string/SocialMediaStr"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/PersonalLibraryTab"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/capriola"
            android:text="@string/PersonalLibraryStr"
            android:textColor="@color/white" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="492dp"
        android:layout_height="233dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/contextHint"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textColor="@color/phonemared"
        android:textSize="20sp"
        android:verticalScrollbarPosition="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contextLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>